@@ -1,3 +1,8 @@
+2008-09-28  Eric Botcazou  <ebotcazou@adacore.com>
+
+	PR middle-end/36575
+	* fold-const (div_and_round_double) <ROUND_DIV_EXPR>: Fix typo.
+
 2008-09-19  Uros Bizjak  <ubizjak@gmail.com>
 
 	Backport from mainline:
